# stamen

./: .ccls  .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  menu.json  stamenConfig.cmake.in  vcpkg-configuration.json  vcpkg.json
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
demo/: CMakeLists.txt  demo_menu.conf  dynamic.cpp  main.c  main.cpp  shared.h
example/: CMakeLists.txt  dynamic.cpp  example_c.c  example_cpp.cpp  shared.h  static.cpp
include/: menu.h  menu.hpp  shared.h  stamen.h  stamen.hpp  stamenc.h
include/stamen/: menu.h  menu.hpp  stamen.h  stamen.hpp
source/: c_bindings.cpp  generate.cpp  menu.cpp  stamen.cpp
src/: CMakeLists.txt  c_bindings.cpp  display.cpp  generate.cpp  main.cpp  menu.cpp  stamen.cpp  stamenc.cpp
test/: CMakeLists.txt
test/source/: stamen_test.cpp
